Fix visibility of off-canvas toggles.

--- a/themes/bootstrap3/less/components/offcanvas.less
+++ b/themes/bootstrap3/less/components/offcanvas.less
@@ -12,7 +12,7 @@
 
 .close-offcanvas,
 .search-filter-toggle {
-  display: none;
+  display: none !important;
 
   &.btn-link,
   .icon-link__label {
@@ -32,7 +32,7 @@
 @media screen and (max-width: 767px) {
   .vufind-offcanvas .close-offcanvas,
   .search-filter-toggle {
-    display: block;
+    display: block !important;
   }
 
   body.vufind-offcanvas {
